# Kinect4Slicer

./: CMakeLists.txt  qSlicerKinect4SlicerModule.cxx  qSlicerKinect4SlicerModule.h  qSlicerKinect4SlicerModuleWidget.cxx  qSlicerKinect4SlicerModuleWidget.h
Logic/: CMakeLists.txt  CMakeLists.txt~  vtkSlicerKinect4SlicerLogic.cxx  vtkSlicerKinect4SlicerLogic.h
MRML/: CMakeLists.txt  CMakeLists.txt~  vtkMRMLKinectSensorNode.cxx  vtkMRMLKinectSensorNode.h
Resources/UI/: qSlicerKinect4SlicerModule.ui
