project(vtkSlicer${MODULE_NAME}ModuleMRML)


set(KIT "${PROJECT_NAME}")

file(TO_CMAKE_PATH "$ENV{KINECTSDK10_DIR}" KINECTSDK)
file(TO_CMAKE_PATH "$ENV{KINECTSDK10_DIR}lib/amd64/Kinect10.lib" KINECTLIB)

set(KIT_EXPORT_DIRECTIVE "VTK_SLICER_${MODULE_NAME_UPPER}_MODULE_MRML_EXPORT")

set(KIT_INCLUDE_DIRECTORIES
  ${CMAKE_CURRENT_SOURCE_DIR}/../Logic
  ${CMAKE_CURRENT_BINARY_DIR}/../Logic
  ${KINECTSDK}/inc
  )

set(KIT_SRCS
  vtkMRMLKinectSensorNode.cxx
  )

add_library(KinectLib STATIC IMPORTED)
set_property(TARGET KinectLib PROPERTY IMPORTED_LOCATION ${KINECTLIB})

set(KIT_TARGET_LIBRARIES
  ${MRML_LIBRARIES}
  SlicerBaseLogic
  KinectLib
  )

#-----------------------------------------------------------------------------
SlicerMacroBuildModuleMRML(
  NAME ${KIT_NAME}
  EXPORT_DIRECTIVE ${KIT_EXPORT_DIRECTIVE}
  INCLUDE_DIRECTORIES ${KIT_INCLUDE_DIRECTORIES}
  SRCS ${KIT_SRCS}
  TARGET_LIBRARIES ${KIT_TARGET_LIBRARIES}
  )

